--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
 	"version": "0.0.0",
 	"type": "module",
 	"scripts": {
-		"dev": "vite",
+		"dev": "concurrently \"vite\" \"cd server && npm run dev\"",
 		"build": "vite build",
 		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
 		"preview": "vite preview",
 		"pack": "npx framer-plugin-tools@latest pack"
 	},
 	"dependencies": {
+		"concurrently": "^9.1.2",
 		"framer-plugin": "^3.1.0-beta.1",
 		"react": "^18",
 		"react-dom": "^18",
