--- a/server/package.json
+++ b/server/package.json
@@ -10,13 +10,14 @@
 		"watch": "tsc -w"
 	},
 	"dependencies": {
+		"chokidar": "^3.6.0",
 		"cors": "^2.8.5",
-		"express": "^4.18.2"
+		"express": "^4.18.3"
 	},
 	"devDependencies": {
 		"@types/cors": "^2.8.17",
 		"@types/express": "^4.17.21",
-		"@types/node": "^20.11.19",
+		"@types/node": "^20.11.24",
 		"ts-node-dev": "^2.0.0",
 		"typescript": "^5.3.3"
 	}
