--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
 		"pack": "npx framer-plugin-tools@latest pack"
 	},
 	"dependencies": {
+		"autoprefixer": "^10.4.21",
+		"classnames": "^2.5.1",
 		"concurrently": "^9.1.2",
 		"framer-plugin": "^3.1.0-beta.1",
+		"postcss": "^8.5.3",
 		"react": "^18",
 		"react-dom": "^18",
+		"tailwindcss": "^3.4.13",
 		"vite-plugin-mkcert": "^1"
 	},
 	"devDependencies": {
