--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"autoprefixer": "^10.4.21",
 		"classnames": "^2.5.1",
 		"concurrently": "^9.1.2",
+		"framer-motion": "^12.6.2",
 		"framer-plugin": "^3.1.0-beta.1",
 		"postcss": "^8.5.3",
 		"react": "^18",
